wip(affichage d'un truc):gg

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,41 @@
 {
     "files.associations": {
         "random": "c",
-        "algorithm": "c"
+        "algorithm": "c",
+        "iostream": "cpp",
+        "array": "cpp",
+        "atomic": "cpp",
+        "chrono": "cpp",
+        "clocale": "cpp",
+        "cstddef": "cpp",
+        "cstdint": "cpp",
+        "cstdlib": "cpp",
+        "iterator": "cpp",
+        "memory": "cpp",
+        "type_traits": "cpp",
+        "initializer_list": "cpp",
+        "cinttypes": "cpp",
+        "*.tcc": "cpp",
+        "bitset": "cpp",
+        "codecvt": "cpp",
+        "condition_variable": "cpp",
+        "cstdio": "cpp",
+        "ctime": "cpp",
+        "list": "cpp",
+        "exception": "cpp",
+        "fstream": "cpp",
+        "functional": "cpp",
+        "iomanip": "cpp",
+        "istream": "cpp",
+        "limits": "cpp",
+        "mutex": "cpp",
+        "ostream": "cpp",
+        "ratio": "cpp",
+        "sstream": "cpp",
+        "typeinfo": "cpp",
+        "utility": "cpp",
+        "__nullptr": "cpp",
+        "cwctype": "cpp",
+        "vector": "cpp"
     }
 }
